--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -33,3 +33,15 @@
     margin: 20px auto;
     text-align: center;
 }
+
+.book {
+    border: 1px solid cornflowerblue;
+    text-align: left;
+    margin: 10px;
+    transition: border, background-color 1s;
+}
+
+.book:hover {
+    border: 1px solid black;
+    background-color: powderblue;
+}
