--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -45,3 +45,24 @@
     border: 1px solid black;
     background-color: powderblue;
 }
+
+#borrowAvailable {
+    color: green;
+}
+
+#borrowNotAvailable {
+    color: darkred;
+}
+
+#borrowButton {
+    font-size: 16px;
+    margin: 5px;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 5px;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 10px;
+    background: azure;
+}
