--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -54,7 +54,7 @@
     color: darkred;
 }
 
-#borrowButton {
+#borrowButton, #returnButton{
     font-size: 16px;
     margin: 5px;
     text-decoration: none;
