--- a/src/main/resources/templates/bookAdd.html
+++ b/src/main/resources/templates/bookAdd.html
@@ -2,18 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Borrow</title>
+    <title>Add book</title>
     <link rel="stylesheet" href="/common.css">
 </head>
 <body>
 <div th:replace="~{templates.html :: logo}"></div>
 <div th:replace="~{templates.html :: menu}"></div>
 <div id="content">
-    <p>Please enter the client information to borrow the book</p>
+    <p>Please enter the book information</p>
     <form method="post">
-        <input type="text" placeholder="name" th:field="*{clientModel.name}">
-        <input type="text" placeholder="surname" th:field="*{clientModel.surname}">
-        <input type="text" placeholder="phone" th:field="*{clientModel.phone}">
+        <input type="text" placeholder="title" th:field="*{bookModel.title}">
+        <input type="text" placeholder="author" th:field="*{bookModel.author}">
+        <input type="text" placeholder="isbn" th:field="*{bookModel.isbn}">
         <input type="submit" value="OK">
     </form>
 </body>
