--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -6,15 +6,14 @@
 </head>
 <body>
 <div id="menu" th:fragment="menu">
-    <a href="/main" class="button">Main page</a>
+    <a href="/main" class="button">List books</a>
     <a href="/login" class="button" th:if="${!isLogged}">Login</a>
     <a href="/logout" class="button" th:if="${isLogged}">Logout</a>
     <a  href="/book/add" class="button" th:if="${isLogged}">Add book</a>
 </div>
-
-
 <div id="logo" th:fragment="logo">
     <img src="/logo.png">
+</div>
 </div>
 </body>
 </html>
